--- a/index.html
+++ b/index.html
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-    <script src="https://cdn.anychart.com/releases/v8/js/anychart-bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css" />
-    <link rel="stylesheet" href="/css/style.css"/>
+<style>
+html, body, #container {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+	}
+</style>
+  <meta charset="UTF-8">
+  <title>{{ title }}</title>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-sankey.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css"/>
+  <link rel="stylesheet" href="https://cdn.anychart.com/releases/v8/fonts/css/anychart.min.css"/>
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
 <div id="container"></div>
 <script>
-    anychart.onDocumentReady(function() {
+  anychart.onDocumentReady(function() {
+    var data = anychart.data.set({{ chartData }});
+    var mapping = data.mapAs({from: "from_node", to: "to_node", weight: "flow_value"});
+      var chart = anychart.sankey(mapping);
+      chart.title({{ chartTitle }});
+      // set chart's padding
+  chart.padding(10, 10, 30, 10);
 
-    var chart = anychart.area3d({{ chartData }});
-    chart.title({{ chartTitle }});
-    chart.animation(true);
+  // set nodes width and padding
+  chart.nodeWidth(100);
+  chart.nodePadding(30);
 
-    var xAxis = chart.xAxis();
-    xAxis.title("Year");
-    var yAxis = chart.yAxis();
-    yAxis.title("Students of the USA, %");
+  // Set flow's normal and hovered fill
+  chart.flow({
+      normal: {
+          fill: '#DFE0DF .3',
+      },
+      hovered: {
+          fill: '#DFE0DF .9'
+      }
+  });
 
-    var yScale = chart.yScale();
-    yScale.minimum(1);
-    yScale.maximum(5);
-
-    chart.crosshair(true);
-
-    chart.container("container");
-    chart.draw();
-});
+  // Set flow's normal and hovered fill
+  chart.node({
+      normal: {
+          fill: function() {
+              return {
+                  keys: [anychart.color.lighten(this.sourceColor, .3), '.1 ' + anychart.color.lighten(this.sourceColor, .3), '.1 #FFFFFF'],
+                  angle: -90
+              }
+          },
+          stroke: '#bbb'
+      },
+      hovered: {
+          fill: function() {
+              return {
+                  keys: [anychart.color.darken(this.sourceColor, .3), '.1 ' + anychart.color.darken(this.sourceColor, .3), '.1 #FFFFFF'],
+                  angle: -90
+              }
+          },
+          stroke: '#666'
+      }
+  });
+      chart.container("container");
+      chart.draw();
+  });
 </script>
 </body>
 </html>
